--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -127,18 +127,10 @@
         <!-- ------------------------------------------------------ Agences  -->
         <!-------------------------------------------------------------------->
         <li class="nav-item">
-            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                aria-expanded="true" aria-controls="collapseUtilities" routerLink="/agencies">
+            <a class="nav-link" routerLink="/agencies">
                 <i class="fas fa-fw fa-home"></i>
                 <span>Agences</span>
             </a>
-            <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                data-parent="#accordionSidebar">
-                <div class="bg-white py-2 collapse-inner rounded">
-                    <h6 class="collapse-header">Opérations Agences:</h6>
-                    <a class="collapse-item" routerLink="/agencies/add">Ajouter Agence</a>
-                </div>
-            </div>
         </li>
 
 
