users & transfers & profile

--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -154,9 +154,15 @@
             <div id="collapseCustom" class="collapse" aria-labelledby="headingCustom" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
                     <h6 class="collapse-header">Opérations Utilisateurs:</h6>
-                    <a class="collapse-item" routerLink="/custom/add">Ajouter Utilisateur</a>
+                    <a class="collapse-item" routerLink="/users/add">Ajouter Utilisateur</a>
                 </div>
             </div>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/profile">
+                <i class="fas fa-fw fa-home"></i>
+                <span>Profile</span>
+            </a>
         </li>
 
 
@@ -221,23 +227,27 @@
                     <li class="nav-item dropdown no-arrow">
                         <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">current User</span>
+                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{username}}</span>
                             <img class="img-profile rounded-circle" src="assets/admin/img/undraw_profile.svg">
                         </a>
                         <!-- Dropdown - User Information -->
                         <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                             aria-labelledby="userDropdown">
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" routerLink="/profile">
                                 <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                 Profile
                             </a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                            <a class="dropdown-item" (click)="logout()" data-toggle="modal" data-target="#logoutModal">
                                 <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                 Logout
                             </a>
                         </div>
                     </li>
+
+
+
+
 
                 </ul>
 
@@ -263,7 +273,7 @@
         <footer class="sticky-footer bg-white">
             <div class="container my-auto">
                 <div class="copyright text-center my-auto">
-                    <span>Copyright &copy; Your Website 2021</span>
+                    <span>Copyright &copy; I.J CAR Sté 2023</span>
                 </div>
             </div>
         </footer>
@@ -291,10 +301,10 @@
                     <span aria-hidden="true">×</span>
                 </button>
             </div>
-            <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+            <div class="modal-body">Selectionner "Logout" pour quitter la session.</div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                <a class="btn btn-primary" href="login.html">Logout</a>
+                <a class="btn btn-primary" type='submit'>Logout</a>
             </div>
         </div>
     </div>
