--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -160,7 +160,7 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" routerLink="/profile">
-                <i class="fas fa-fw fa-home"></i>
+                <i class="fas fa-fw fa-user"></i>
                 <span>Profile</span>
             </a>
         </li>
